# rhizodep

./: .gitignore  AUTHORS.md  AUTHORS.rst  CITATION.cff  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  dockerfile  pyproject.toml  requirements.bat  requirements.sh  requirements.txt  requirements_minimal.txt  setup.cfg  setup.py
.github/workflows/: conda-package-build.yml
.pkglts/: pkg_cfg.json  pkg_hash.json  pkg_version.json
Other_works/: APTOS_input_1.xlsx  Operation_Montpellier.py  angles_calculated.csv  angles_original.csv  initialize_TG.py  pseudo-APTOS.py  root01240.pckl  rsml_data.csv  rsml_data.xlsx  rsml_properties.csv  rsml_reader.py  sandbox.py  shoot_root_connection.py  simple_MTG_plotting.py  slider_process_plasticity.py  soil_CN_dynamics.py  source_plotting.py  voxel_results.csv
conda/: meta.yaml
simulations/: simulation.py
simulations/inputs/: Scenarios_24_06.xlsx
simulations/rhizodep_2021/: Opening_MTG_files.py  main.py  video_making_elaborated.py
simulations/running_example/: main.py
simulations/running_scenarios/: comparing_multiple_scenarios.py  main_run_scenarios.py  making_graph.py  making_video.py  opening_MTG_files.py  run_scenarios.py
simulations/scenarios_parameters/: main_multiple_scenarios.py  main_one_scenario.py
simulations/scene/: simulation.py
simulations/single_plant/: sensitivity_analysis.py  sensitivity_analyze_only.py
src/: main.py
src/openalea/: __init__.py
src/rhizodep/: adventitious_roots_inputs.csv  alternative_plotting.py  component.py  coupling_translator.py  coupling_translator.yaml  making_video.py  model.py  model_anatomy.py  model_carbon.py  model_growth.py  model_soil.py  mycorrhizae.py  opening_and_recomputing_MTG_files.py  parameters.py  rhizo_soil.py  rhizodep.py  rhizodep_soil.py  root0.pckl  root_anatomy.py  root_carbon.py  root_growth.py  run_simulation.py  running_simulation.py  seminal_roots_inputs.csv  simulation.py  simulation_simple.py  soil_model.py  soil_module_autonomous.py  tools.py  translator.pckl
test/: ArchiSimple_MTG.py  Opening_MTG_files.py  conftest.py  graph_making.py  organs_states.csv  rhizodep.py  rhizodep_2021.py  rhizodep_new_without_priority.py  rhizodep_with_growth_with_priority.py  sucrose_input_0059.csv  test_apply_scenario.py  test_documentation.py  test_import.py  test_init.py  test_just_analyze.py  test_log.py  test_log_analyze.py  test_log_scenarios.py  test_mtg.py  test_rhizodep.py  test_rhizodep_with_input_file.py  test_root_mtg.py  test_run.py  test_single_run.py  video.py  video_making_elaborated.py
test/inputs/: root_initiated.pckl  scenario_test.xlsx  (+2 more)
tutorial/: comparing_multiple_scenarios.py  main.py  running_scenarios.py
(+140 files in other folders)
