[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

# where your source lies if you followed src layout
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true # force explicit declaration of data (disable automatic inclusion)

[tool.setuptools.package-data]
"openalea.rhizodep" = ["*.yaml"]

# enable dynamic version based on git tags
[tool.setuptools_scm]

[project]
name = "openalea.rhizodep"
authors = [
  { name = "Frédéric Rees", email = "frederic.rees@inrae.fr" },
  { name = "Christophe Pradal", email = "christophe.pradal@inria.fr" },
  { name = "Tristan Gérault", email = "tristan.gerault@inrae.fr" },
]
description = "RhizoDep is a 3D root carbon, growth and anatomy root FSPM in OpenAlea"
readme = "README.md"
license = "CECILL-C"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  #"License :: OSI Approved :: CeCILL-C License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Framework :: OpenAlea",
]

# you can list here all dependencies that are pip-instalable, and that have a name identical to the one used by conda (to allow reuse of this list in meta.yaml)
# If conda name is different, please do not declare the pip name, and declare conda name in the next section
dependencies = []

# section specific to conda-only distributed package (not used by pip yet)
[tool.conda-environment]

dependencies = [
    "openalea.metafspm",
    "openalea.fspm-utility",
    # Bellow is probably not needed since already a dependency of openalea.fspm-utility
    # Just mentioned for precision for now
    "scipy",
    "numpy",
    "openalea.mtg"
]

[project.optional-dependencies]
test = [
  "pytest",
  "nbmake"
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
doc = [
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "ipykernel",
  "sphinx-copybutton",
  "ipython_genutils",
  "nbsphinx"
]

[project.urls]
Repository = "https://github.com/openalea/root-cynaps"

[project.entry-points."wralea"]
"my_pkg" = "openalea.rhizodep_wralea"